update gRPC API and auth
